--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,8 @@ edition = "2021"
 
 [dependencies]
 quick-xml = "0.22"
-nix = "0.23"
+nix = "0.24"
 libc = "0.2"
 signal-hook = "0.3"
-typed-builder = "0.1"
+typed-builder = "0.10"
+tempdir = "*"
