--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "rshark"
+name = "rtshark"
 version = "0.1.0"
 edition = "2021"
 
@@ -7,8 +7,8 @@ edition = "2021"
 
 [dependencies]
 quick-xml = "0.22"
-nix = "0.24"
-libc = "0.2"
-signal-hook = "0.3"
 typed-builder = "0.10"
+
+[dev-dependencies]
+nix = "*"
 tempdir = "*"
