--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -18,5 +18,7 @@ jobs:
     - uses: actions/checkout@v3
     - name: Build
       run: cargo build
+    - name: Install tshark
+      run: sudo apt-get install -y tshark
     - name: Run tests
       run: cargo test
