--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -15,6 +15,9 @@ jobs:
     runs-on: windows-2019 
 
     steps:
+    - name: Install Chocolatey and wireshark
+      shell: powershell
+      run: choco install wireshark
     - uses: actions/checkout@v3
     - name: Build
       run: cargo build --verbose
