--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -17,7 +17,7 @@ jobs:
     steps:
     - name: Install Chocolatey and wireshark
       shell: powershell
-      run: choco install wireshark
+      run: Install-Module -Name TShark -RequiredVersion 1.0.2
     - uses: actions/checkout@v3
     - name: Build
       run: cargo build --verbose
