--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -15,9 +15,9 @@ jobs:
     runs-on: windows-2019 
 
     steps:
-    - name: Install Chocolatey and wireshark
+    - name: Install TShark
       shell: powershell
-      run: Install-Module -Name TShark -RequiredVersion 1.0.2
+      run: choco install tshark
     - uses: actions/checkout@v3
     - name: Build
       run: cargo build --verbose
