--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -17,9 +17,11 @@ jobs:
     steps:
     - name: Install TShark
       shell: powershell
-      run: choco install tshark
+      run: choco install -y tshark
     - uses: actions/checkout@v3
     - name: Build
       run: cargo build --verbose
     - name: Run tests
-      run: cargo test --verbose
+      run: |
+        echo "C:\Program Files\Wireshark" >> $GITHUB_PATH
+        cargo test --verbose
