--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -17,7 +17,7 @@ jobs:
     steps:
     - name: Install TShark
       shell: powershell
-      run: choco install -y tshark
+      run: choco install -y wireshark
     - uses: actions/checkout@v3
     - name: Build
       run: cargo build --verbose
