--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -21,7 +21,9 @@ jobs:
     - uses: actions/checkout@v3
     - name: Build
       run: cargo build --verbose
-    - name: Run tests
-      run: |
-        echo "C:\Program Files\Wireshark" >> $GITHUB_PATH
-        cargo test --verbose
+    - name: Check where is thshark
+      run: dir "C:\Program Files\Wireshark"
+#    - name: Run tests
+#      run: |
+#        echo "C:\Program Files\Wireshark" >> $GITHUB_PATH
+#        cargo test --verbose
