--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,13 +16,13 @@ exclude = ["/.github"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-chrono = { version = "0.4.20", default-features = false }
-quick-xml = "0.30"
+chrono = { version = "0.4", default-features = false }
+quick-xml = "0.33"
 
 [dev-dependencies]
 tempdir = "0.3"
 libc = "0.2"
-serial_test="2"
+serial_test="3"
 
 [target.'cfg(unix)'.dev-dependencies]
-nix = "0.25"
+nix = { version = "0.29", features = ["fs", "signal"] }
