--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,10 +14,17 @@ keywords = ["wireshark", "tshark", "pcap", "network", "dissector"]
 exclude = ["/.github"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[features]
+default = ["quick-xml"]
+async = ["tokio", "tokio-stream", "quick-xml/async-tokio"]
+
 [dependencies]
 chrono = { version = "0.4", default-features = false }
-quick-xml = "0.37"
 semver = "1"
+quick-xml = { version = "0.37", optional = true }
+tokio = { version = "1.45", features = ["full"], optional = true }
+tokio-stream = { version = "0.1", optional = true }
+
 
 [dev-dependencies]
 libc = "0.2"
