--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -12,19 +12,19 @@ env:
 jobs:
   build:
 
-    runs-on: windows-2019
+    runs-on: windows-2025
 
     steps:
-    - name: Install TShark
-      shell: powershell
-      run: choco install -y wireshark
-    - uses: actions/checkout@v3
-    - name: Build
-      run: cargo build --verbose
-    - name: Check where is thshark
-      run: dir "C:\Program Files\Wireshark"
-    - name: Run doc tests
-      run: cargo test --doc
+      - name: Install TShark
+        shell: powershell
+        run: choco install -y wireshark
+      - uses: actions/checkout@v3
+      - name: Build
+        run: cargo build --features async --verbose
+      - name: Check where is thshark
+        run: dir "C:\Program Files\Wireshark"
+      - name: Run doc tests
+        run: cargo test --features --doc
     # unit test currently fails with this error : `Err` value: Custom { kind: NotFound, error: "Unable to find tshark: program not found" }
     #- name: Run unit tests
     #  run: |
