--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,15 +16,18 @@ exclude = ["/.github"]
 
 [features]
 default = ["quick-xml"]
-async = ["tokio", "tokio-stream", "quick-xml/async-tokio"]
+async = ["tokio", "quick-xml/async-tokio"]
 
 [dependencies]
+tokio = { version = "1.45", features = [
+    "process",
+    "rt-multi-thread",
+    "time",
+    "macros",
+], optional = true }
 chrono = { version = "0.4", default-features = false }
 semver = "1"
-quick-xml = { version = "0.37", optional = true }
-tokio = { version = "1.45", features = ["full"], optional = true }
-tokio-stream = { version = "0.1", optional = true }
-
+quick-xml = { version = "0.38", optional = true }
 
 [dev-dependencies]
 libc = "0.2"
